fix(footer): wide screen bottom overlap

--- a/src/components/TodoMvc/styles.css
+++ b/src/components/TodoMvc/styles.css
@@ -48,6 +48,7 @@ body {
 }
 
 .footer {
+  margin-bottom: 40px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -67,7 +68,7 @@ body {
 
 @media (max-width: 430px) {
   .footer {
-    margin-bottom: 50px;
+    margin-bottom: 70px;
   }
 
   .filters {
